[package]
name = "tunnels-keygen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tunnels protocol key generation tool"

[[bin]]
name = "tunnels-keygen"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
tunnels-core = { path = "../tunnels-core" }
