[package]
name = "tunnels-sdk"
description = "SDK for the Tunnels protocol - key management and transaction signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tunnels-core = { path = "../tunnels-core" }
serde.workspace = true
bincode.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = []
