[package]
name = "tunnels-smoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "End-to-end smoke test for Tunnels protocol"

[[bin]]
name = "tunnels-smoke"
path = "src/main.rs"

[dependencies]
# Protocol types
tunnels-core = { path = "../tunnels-core" }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Random
rand.workspace = true

# Temp directories
tempfile = "3"

# Colored output
colored = "2"

# Home directory
dirs = "5"
