[package]
name = "tunnels-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "State machine for the Tunnels protocol"

[dependencies]
tunnels-core = { path = "../tunnels-core" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
