[package]
name = "tunnels-wallet"
description = "Command-line wallet for the Tunnels protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tunnels-wallet"
path = "src/main.rs"

[dependencies]
tunnels-sdk = { path = "../tunnels-sdk" }
tunnels-core = { path = "../tunnels-core" }
serde.workspace = true
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rpassword = "7.3"
hex = "0.4"
ureq = { version = "3.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.19"
